--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,12 +39,15 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   get_it: ^7.7.0
+  go_router: ^14.2.0
   injectable: ^2.4.2
 
 dev_dependencies:
+  build_runner: ^2.4.8
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  injectable_generator: ^2.4.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -55,9 +58,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
