--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_easyloading: ^3.0.5
   get_it: ^7.7.0
   go_router: ^14.2.0
   injectable: ^2.4.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   build_runner: ^2.4.8
@@ -48,6 +50,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   injectable_generator: ^2.4.1
+  json_serializable: ^6.7.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
