--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   go_router: ^14.2.0
   injectable: ^2.4.2
   json_annotation: ^4.9.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   build_runner: ^2.4.8
