authentication flow functional

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_easyloading: ^3.0.5
   get_it: ^7.7.0
   go_router: ^14.2.0
+  image_picker: ^1.1.2
   injectable: ^2.4.2
   json_annotation: ^4.9.0
   shared_preferences: ^2.2.3
@@ -63,7 +64,7 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
