--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.1
   cloud_firestore: ^5.0.1
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
@@ -45,6 +46,7 @@ dependencies:
   injectable: ^2.4.2
   json_annotation: ^4.9.0
   shared_preferences: ^2.2.3
+  shimmer: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.4.8
