--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,13 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cached_network_image: ^3.3.1
-  cloud_firestore: ^5.0.1
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   equatable: ^2.0.5
   firebase_auth: ^5.1.0
-  firebase_core: ^3.1.0
-  firebase_storage: ^12.0.1
+  paginate_firestore: ^1.0.3+1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
@@ -47,7 +45,13 @@ dependencies:
   json_annotation: ^4.9.0
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
+  firebase_pagination: ^3.1.0
 
+dependency_overrides:
+  cloud_firestore: ^5.0.1
+  firebase_storage: ^12.0.1
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
 dev_dependencies:
   build_runner: ^2.4.8
   flutter_lints: ^3.0.0
